[gd_scene load_steps=28 format=3 uid="uid://de56s7eayi24e"]

[ext_resource type="Script" path="res://CarRigidBody.gd" id="1_gxrqs"]
[ext_resource type="PhysicsMaterial" uid="uid://bjm334ebiwq52" path="res://car_physics.tres" id="1_qwj5j"]
[ext_resource type="Script" path="res://tireRaycast.gd" id="2_4ug8g"]
[ext_resource type="PackedScene" uid="uid://cu1o1ufpacigj" path="res://carMaterial/Model.tscn" id="2_bvmt0"]
[ext_resource type="Script" path="res://tire.gd" id="3_hj1pj"]
[ext_resource type="Material" uid="uid://qi7cksv7xac8" path="res://debug_material.tres" id="4_3vuwg"]
[ext_resource type="PackedScene" uid="uid://bfpyrrlsxjbd0" path="res://carMaterial/TireModel.tscn" id="4_bbs70"]
[ext_resource type="Script" path="res://InputHandler.gd" id="6_56wu2"]
[ext_resource type="Script" path="res://VisualRayCast.gd" id="6_vmnhn"]
[ext_resource type="PackedScene" uid="uid://yonx6jdmd008" path="res://CarEngineSoundPlayer.tscn" id="9_c4lag"]
[ext_resource type="Shader" uid="uid://tfdck0ea3rd4" path="res://carMaterial/SmokeMaterialBillboard.tres" id="9_i4dcy"]
[ext_resource type="Script" path="res://CarSyncronizer.gd" id="11_yulfi"]
[ext_resource type="Script" path="res://CarSoundEffects.gd" id="13_eu83n"]
[ext_resource type="AudioStream" uid="uid://b7ok77i5av7ki" path="res://Sounds/Car/Impact1.mp3" id="13_nhrhm"]
[ext_resource type="AudioStream" uid="uid://bbufcmqpovk3k" path="res://Sounds/Car/Impact2.wav" id="14_kv02k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_inc80"]
margin = 0.2
size = Vector3(1.865, 0.621, 4)

[sub_resource type="BoxMesh" id="BoxMesh_u7kc3"]
flip_faces = true
size = Vector3(1.865, 0.621, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_1s8rg"]
margin = 0.2
size = Vector3(1.46891, 0.716233, 0.953785)

[sub_resource type="BoxMesh" id="BoxMesh_k7ngf"]
size = Vector3(1.46891, 0.716233, 0.953785)

[sub_resource type="Gradient" id="Gradient_r41vh"]
colors = PackedColorArray(0.623057, 0.709816, 0.773414, 1, 0.623529, 0.709804, 0.772549, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a8a45"]
gradient = SubResource("Gradient_r41vh")

[sub_resource type="Curve" id="Curve_vm18q"]
max_value = 31.12
_data = [Vector2(0, 5.37527), 0.0, 0.0, 0, 0, Vector2(1, 24.0473), 4.62529, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_og40x"]
curve = SubResource("Curve_vm18q")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hyqd4"]
lifetime_randomness = 0.1
emission_shape = 3
emission_box_extents = Vector3(0.3, 0.1, 0.1)
spread = 0.0
flatness = 1.0
gravity = Vector3(0, 25, 0)
scale_max = 1.2
scale_curve = SubResource("CurveTexture_og40x")
color_ramp = SubResource("GradientTexture1D_a8a45")
turbulence_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ggqdx"]
render_priority = 0
shader = ExtResource("9_i4dcy")

[sub_resource type="PlaneMesh" id="PlaneMesh_dhktc"]
material = SubResource("ShaderMaterial_ggqdx")
size = Vector2(0.2, 0.2)
orientation = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_73hp7"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath(".:linear_velocity")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath(".:angular_velocity")
properties/3/spawn = true
properties/3/sync = true
properties/4/path = NodePath(".:frameColor")
properties/4/spawn = true
properties/4/sync = false
properties/5/path = NodePath(".:respawnRotation")
properties/5/spawn = false
properties/5/sync = false
properties/6/path = NodePath(".:respawnPosition")
properties/6/spawn = false
properties/6/sync = false
properties/7/path = NodePath(".:nrCheckpoints")
properties/7/spawn = false
properties/7/sync = false
properties/8/path = NodePath(".:nrLaps")
properties/8/spawn = false
properties/8/sync = false
properties/9/path = NodePath(".:currentLap")
properties/9/spawn = false
properties/9/sync = false
properties/10/path = NodePath(".:currentCheckPoint")
properties/10/spawn = false
properties/10/sync = false
properties/11/path = NodePath(".:timeTrialState")
properties/11/spawn = true
properties/11/sync = true
properties/12/path = NodePath(".:driftInput")
properties/12/spawn = true
properties/12/sync = true

[node name="CarRigidBody" type="RigidBody3D"]
unique_name_in_owner = true
collision_mask = 3
mass = 800.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.36, 0.16)
physics_material_override = ExtResource("1_qwj5j")
continuous_cd = true
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("1_gxrqs")
SPRING_STRENGTH = 120000.0
DAMPING = 373333.0
TIRE_GRIP = 0.9
TIRE_MASS = 30.0
ACCELERATION = 6133.0
STEERING = 0.2
AIR_STEERING = 53333.0
AIR_PITCH_CONTROL = 53333.0
SOUND_SPEED_LIMIT = 1.0
ENGINE_SOUND_PITCH_FACTOR = 4.0
MAX_FRICTION = 0.9
SLIDE_FRICTION = 0.1
MIN_FRICTION = 0.05
DRIFT_FACTOR = 0.2

[node name="CarModel" parent="." instance=ExtResource("2_bvmt0")]
unique_name_in_owner = true
visible = false

[node name="CarBodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586, 0.161)
shape = SubResource("BoxShape3D_inc80")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CarBodyCollider"]
mesh = SubResource("BoxMesh_u7kc3")
surface_material_override/0 = ExtResource("4_3vuwg")

[node name="CarHoodCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22738, -0.408221)
shape = SubResource("BoxShape3D_1s8rg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CarHoodCollider"]
mesh = SubResource("BoxMesh_k7ngf")
surface_material_override/0 = ExtResource("4_3vuwg")

[node name="raycasts" type="Node3D" parent="."]

[node name="FrontLeftRayCast" type="RayCast3D" parent="raycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.929007, 0.293817, 2.15825)
target_position = Vector3(0, -0.5, 0)
script = ExtResource("2_4ug8g")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="raycasts/FrontLeftRayCast"]
remote_path = NodePath("../../../Tires/FrontLeftVisualCast")
use_global_coordinates = false
update_position = false
update_scale = false

[node name="FrontRightRayCast" type="RayCast3D" parent="raycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.929, 0.293817, 2.15825)
target_position = Vector3(0, -0.5, 0)
script = ExtResource("2_4ug8g")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="raycasts/FrontRightRayCast"]
remote_path = NodePath("../../../Tires/FrontRightVisualCast")
use_global_coordinates = false
update_position = false
update_scale = false

[node name="BackLeftRayCast" type="RayCast3D" parent="raycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.929007, 0.293817, -1.83546)
target_position = Vector3(0, -0.5, 0)
script = ExtResource("2_4ug8g")

[node name="BackRightRayCast" type="RayCast3D" parent="raycasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.929, 0.293817, -1.83546)
target_position = Vector3(0, -0.5, 0)
script = ExtResource("2_4ug8g")

[node name="Tires" type="Node3D" parent="."]

[node name="FrontLeftVisualCast" type="RayCast3D" parent="Tires"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.929, 0.475, 1.5)
target_position = Vector3(0, -0.575, 0)
script = ExtResource("6_vmnhn")

[node name="FrontLeftTire" parent="Tires/FrontLeftVisualCast" instance=ExtResource("4_bbs70")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("3_hj1pj")

[node name="SmokeEmitter" type="GPUParticles3D" parent="Tires/FrontLeftVisualCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, -0.3, -0.3)
emitting = false
amount = 32
lifetime = 0.71
randomness = 0.05
process_material = SubResource("ParticleProcessMaterial_hyqd4")
draw_pass_1 = SubResource("PlaneMesh_dhktc")

[node name="FrontRightVisualCast" type="RayCast3D" parent="Tires"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.929, 0.475, 1.5)
target_position = Vector3(0, -0.575, 0)
script = ExtResource("6_vmnhn")

[node name="FrontRightTire" parent="Tires/FrontRightVisualCast" instance=ExtResource("4_bbs70")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("3_hj1pj")

[node name="SmokeEmitter" type="GPUParticles3D" parent="Tires/FrontRightVisualCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, -0.3, -0.3)
emitting = false
amount = 32
lifetime = 0.71
randomness = 0.05
process_material = SubResource("ParticleProcessMaterial_hyqd4")
draw_pass_1 = SubResource("PlaneMesh_dhktc")

[node name="BackLeftVisualCast" type="RayCast3D" parent="Tires"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.929, 0.475, -1.5)
target_position = Vector3(0, -0.575, 0)
script = ExtResource("6_vmnhn")

[node name="BackLeftTire" parent="Tires/BackLeftVisualCast" instance=ExtResource("4_bbs70")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("3_hj1pj")

[node name="SmokeEmitter" type="GPUParticles3D" parent="Tires/BackLeftVisualCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, -0.3, -0.3)
emitting = false
amount = 32
lifetime = 0.71
randomness = 0.05
process_material = SubResource("ParticleProcessMaterial_hyqd4")
draw_pass_1 = SubResource("PlaneMesh_dhktc")

[node name="BackRightVisualCast" type="RayCast3D" parent="Tires"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.929, 0.475, -1.5)
target_position = Vector3(0, -0.575, 0)
script = ExtResource("6_vmnhn")

[node name="BackRightTire" parent="Tires/BackRightVisualCast" instance=ExtResource("4_bbs70")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("3_hj1pj")

[node name="SmokeEmitter" type="GPUParticles3D" parent="Tires/BackRightVisualCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, -0.3, -0.3)
emitting = false
amount = 32
lifetime = 0.71
randomness = 0.05
process_material = SubResource("ParticleProcessMaterial_hyqd4")
draw_pass_1 = SubResource("PlaneMesh_dhktc")

[node name="CarEngineSound" parent="." instance=ExtResource("9_c4lag")]
unique_name_in_owner = true
bus = &"Engine Sound"

[node name="InputHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_56wu2")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_73hp7")
visibility_update_mode = 1
script = ExtResource("11_yulfi")

[node name="SoundEffects" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.923604, 0)
script = ExtResource("13_eu83n")

[node name="Impact1" type="AudioStreamPlayer3D" parent="SoundEffects"]
unique_name_in_owner = true
stream = ExtResource("13_nhrhm")
unit_size = 100.0

[node name="Impact2" type="AudioStreamPlayer3D" parent="SoundEffects"]
unique_name_in_owner = true
stream = ExtResource("14_kv02k")
unit_size = 100.0
